k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
  labels:
    app: server
spec:
  selector:
    matchLabels:
      app: server
  replicas: 2
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: antoniolopesg/hello-world:v5.3
          # livenessProbe:
          #   httpGet:
          #     path: /
          #     port: 8000
          #   periodSeconds: 15
          #   failureThreshold: 1
          #   timeoutSeconds: 1
          #   successThreshold: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8000
            periodSeconds: 1
            initialDelaySeconds: 60
            failureThreshold: 1
            timeoutSeconds: 1
            successThreshold: 1
          volumeMounts:
            - mountPath: /myfamily
              name: config
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: configmap-family
            items:
              - key: members
                path: "family.txt"
