k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  selector:
    app: server
  type: LoadBalancer
  ports:
    - name: server-service
      port: 80
      targetPort: 8000
      protocol: TCP
