k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: 'ingress.antoniolopesg.dev'
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: server-service
            port:
              number: 80
